tests/ui/transmute-ref-src-not-intobytes.nightly.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> $DIR/transmute-ref-src-not-intobytes.rs:21:33
   |
21 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 unsatisfied trait bound
   |                                 required by a bound introduced by this call
   |
help: the trait `IntoBytes` is not implemented for `Src`
  --> $DIR/transmute-ref-src-not-intobytes.rs:18:1
   |
18 | struct Src(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `Src`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
             AtomicU32
             AtomicU64
             AtomicU8
             AtomicUsize
             Cell<T>
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             Isize<O>
             ManuallyDrop<T>
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
             NonZero<isize>
             NonZero<u128>
             NonZero<u16>
             NonZero<u32>
             NonZero<u64>
             NonZero<u8>
             NonZero<usize>
             Option<NonZero<i128>>
             Option<NonZero<i16>>
             Option<NonZero<i32>>
             Option<NonZero<i64>>
             Option<NonZero<i8>>
             Option<NonZero<isize>>
             Option<NonZero<u128>>
             Option<NonZero<u16>>
             Option<NonZero<u32>>
             Option<NonZero<u64>>
             Option<NonZero<u8>>
             Option<NonZero<usize>>
             PhantomData<T>
             ReadOnly<T>
             SliceDst<T, U>
             U128<O>
             U16<O>
             U32<O>
             U64<O>
             Unalign<T>
             UnsafeCell<T>
             Usize<O>
             Wrapping<T>
             [T; N]
             [T]
             bool
             char
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
             str
             u128
             u16
             u32
             u64
             u8
             usize
note: required by a bound in `AssertSrcIsIntoBytes`
  --> $DIR/transmute-ref-src-not-intobytes.rs:21:33
   |
21 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> $DIR/transmute-ref-src-not-intobytes.rs:21:33
   |
21 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `IntoBytes` is not implemented for `Src`
  --> $DIR/transmute-ref-src-not-intobytes.rs:18:1
   |
18 | struct Src(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `Src`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
             AtomicU32
             AtomicU64
             AtomicU8
             AtomicUsize
             Cell<T>
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             Isize<O>
             ManuallyDrop<T>
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
             NonZero<isize>
             NonZero<u128>
             NonZero<u16>
             NonZero<u32>
             NonZero<u64>
             NonZero<u8>
             NonZero<usize>
             Option<NonZero<i128>>
             Option<NonZero<i16>>
             Option<NonZero<i32>>
             Option<NonZero<i64>>
             Option<NonZero<i8>>
             Option<NonZero<isize>>
             Option<NonZero<u128>>
             Option<NonZero<u16>>
             Option<NonZero<u32>>
             Option<NonZero<u64>>
             Option<NonZero<u8>>
             Option<NonZero<usize>>
             PhantomData<T>
             ReadOnly<T>
             SliceDst<T, U>
             U128<O>
             U16<O>
             U32<O>
             U64<O>
             Unalign<T>
             UnsafeCell<T>
             Usize<O>
             Wrapping<T>
             [T; N]
             [T]
             bool
             char
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
             str
             u128
             u16
             u32
             u64
             u8
             usize
note: required by a bound in `AssertSrcIsIntoBytes`
  --> $DIR/transmute-ref-src-not-intobytes.rs:21:33
   |
21 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
